added parchment, processmanager, pydermonkey, and more.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,44 @@ var SETTINGS = {
       homepage: 'http://hg.toolness.com/browser-couch/raw-file/954b2b739d41/index.html',
       pushed_at: 'Tue Apr 21 12:13:21 2009 -0700',
       description: 'Naive attempt at client-side CouchDB in the browser using DOMStorage.'
+    },
+    {
+      name: 'parchment',
+      html_url: 'https://code.google.com/p/parchment/',
+      blogpost_url: 'http://www.toolness.com/wp/2008/06/introducing-parchment/',
+      homepage: 'http://parchment.toolness.com/',
+      pushed_at: 'June 2008',
+      description: 'A web-based interactive fiction interpreter with beautiful typography.'
+    },
+    {
+      name: 'processmanager',
+      html_url: 'http://hg.toolness.com/processmanager/',
+      pushed_at: 'Sun Sep 02 04:40:21 2012 +0000',
+      description: 'A simple Python-based solution for managing any process or collection of processes that provide services for an indefinite period of time (e.g., a server or daemon) on a Unix-based OS.'
+    },
+    {
+      name: 'open-web-challenges',
+      blogpost_url: 'http://www.toolness.com/wp/2009/04/design-challenge-tutorials/',
+      html_url: 'http://hg.toolness.com/open-web-challenges/',
+      homepage: 'http://hg.toolness.com/open-web-challenges/raw-file/923fcc0ad519/index.html',
+      pushed_at: 'Tue Mar 31 10:51:03 2009 -0700',
+      description: 'Puzzle-based tutorials for learning Open Web technologies.'
+    },
+    {
+      name: 'ff-herdict-preso',
+      homepage: 'http://hg.toolness.com/ff-herdict-preso/raw-file/1e2d6fdd2bf2/ff-herdict-preso.html',
+      blogpost_url: 'http://www.toolness.com/wp/2010/02/herdict-firefox-integration-and-better-html-presentations/',
+      html_url: 'http://hg.toolness.com/ff-herdict-preso/',
+      pushed_at: 'Wed Feb 10 16:35:00 2010 -0800',
+      description: 'A short pitch for integrating Firefox with the Berkman Center\'s Herdict project.'
+    },
+    {
+      name: 'pydermonkey',
+      html_url: 'https://code.google.com/p/pydermonkey/',
+      homepage: 'http://pydermonkey.googlecode.com/hg/docs/rendered/index.html',
+      blogpost_url: 'http://www.toolness.com/wp/2009/09/coming-at-you-like-a-pydermonkey/',
+      pushed_at: 'September 2009',
+      description: 'A Python C extension module to expose the Mozilla SpiderMonkey engine to Python.'
     }
   ],
   extensions: {
