--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@ var SETTINGS = {
       blogpost_url: 'http://www.toolness.com/wp/2009/09/coming-at-you-like-a-pydermonkey/',
       pushed_at: 'September 2009',
       description: 'A Python C extension module to expose the Mozilla SpiderMonkey engine to Python.'
+    },
+    {
+      name: 'collusion',
+      homepage: 'http://collusion.toolness.org/',
+      html_url: 'https://github.com/toolness/collusion',
+      blogpost_url: 'http://www.toolness.com/wp/2011/07/collusion/',
+      pushed_at: 'July 2011',
+      description: 'An add-on and web app for visualizing cookie-laden HTTP requests between websites in real time.'
     }
   ],
   extensions: {
