added js-missions and newbug

--- a/index.html
+++ b/index.html
@@ -103,6 +103,18 @@ var SETTINGS = {
       blogpost_url: 'http://www.toolness.com/wp/2011/07/collusion/',
       pushed_at: 'July 2011',
       description: 'An add-on and web app for visualizing cookie-laden HTTP requests between websites in real time.'
+    },
+    {
+      name: 'js-missions',
+      homepage: 'http://labs.toolness.com/temp/js-missions/',
+      pushed_at: 'August 2011',
+      description: 'An attempt at teaching JavaScript with a nervous-system metaphor.'
+    },
+    {
+      name: 'newbug',
+      homepage: 'http://newbug.toolness.org/',
+      pushed_at: 'June 2012',
+      description: 'A very simple autocompletion-based interface for creating bugs in Bugzilla.'
     }
   ],
   extensions: {
