added more projects.

--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@ var SETTINGS = {
       homepage: 'http://newbug.toolness.org/',
       pushed_at: 'June 2012',
       description: 'A very simple autocompletion-based interface for creating bugs in Bugzilla.'
+    },
+    {
+      name: 'webmaking-for-knitters',
+      homepage: 'http://labs.toolness.com/temp/webmaking-for-knitters/',
+      pushed_at: 'January 2012',
+      description: 'A presentation answering Mark Surman\'s question, "what sort of web makers do you most want us to work with next year?"'
+    },
+    {
+      name: 'webmakerx-spike',
+      homepage: 'http://webmakerx.toolness.org/',
+      html_url: 'https://github.com/toolness/friendlycode/tree/webmaker-x',
+      blogpost_url: 'http://brettgaylor.tumblr.com/post/41197618281/webmaker-2013-roadmap-0-1',
+      pushed_at: 'January 2013',
+      description: 'An experimental mashup of Thimble and Popcorn Maker via Instapoppin\'s markup API.'
+    },
+    {
+      name: 'thimble-dzslides-spike',
+      homepage: 'http://labs.toolness.com/temp/thimble-dzslides-spike/?notypekit=1',
+      html_url: 'https://github.com/toolness/friendlycode/tree/dzslides-spike',
+      pushed_at: 'July 2012',
+      description: 'An experimental fork of Thimble allowing for easy creation of slideshows via Paul Rouget\'s DZSlides and a markup API.'
+    },
+    {
+      name: 'thimble-physics-spike',
+      homepage: 'http://labs.toolness.com/temp/thimble-dzslides-spike/?notypekit=1#static:physics',
+      html_url: 'https://github.com/toolness/friendlycode/tree/dzslides-spike',
+      pushed_at: 'July 2012',
+      description: 'An experimental fork of Thimble allowing for easy creation of physics simulations via Box2D and a markup API.'
     }
   ],
   extensions: {
