added links to some blogposts

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@ var SETTINGS = {
       name: 'thimble-dzslides-spike',
       homepage: 'http://labs.toolness.com/temp/thimble-dzslides-spike/?notypekit=1',
       html_url: 'https://github.com/toolness/friendlycode/tree/dzslides-spike',
+      blogpost_url: 'http://www.toolness.com/wp/2013/01/building-bridges-between-guis-and-code-with-markup-apis/',
       pushed_at: 'July 2012',
       description: 'An experimental fork of Thimble allowing for easy creation of slideshows via Paul Rouget\'s DZSlides and a markup API.'
     },
@@ -141,11 +142,15 @@ var SETTINGS = {
       name: 'thimble-physics-spike',
       homepage: 'http://labs.toolness.com/temp/thimble-dzslides-spike/?notypekit=1#static:physics',
       html_url: 'https://github.com/toolness/friendlycode/tree/dzslides-spike',
+      blogpost_url: 'http://www.toolness.com/wp/2013/01/building-bridges-between-guis-and-code-with-markup-apis/',
       pushed_at: 'July 2012',
       description: 'An experimental fork of Thimble allowing for easy creation of physics simulations via Box2D and a markup API.'
     }
   ],
   extensions: {
+    'badge-microformat-fun': {
+      blogpost_url: 'http://www.toolness.com/wp/2013/07/a-html-microformat-for-open-badges/'
+    },
     'bugzilla-dashboard': {
       blogpost_url: 'http://www.toolness.com/wp/2010/08/a-dashboard-for-bugs/'
     }
