--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@ var SETTINGS = {
     'hackasaurus-lib',
     'oop-jetpack-sdk-poc'
   ],
+  forks: [
+    'collusion',
+    'slowparse'
+  ],
   extras: [
     {
       name: 'python-for-js-programmers',
@@ -46,6 +50,7 @@ var SETTINGS = {
     {
       name: '826-national-preso',
       html_url: 'http://hg.toolness.com/826-national-preso/',
+      blogpost_url: 'http://www.toolness.com/wp/2010/10/what-mozilla-can-learn-from-826-national/',
       homepage: 'http://hg.toolness.com/826-national-preso/raw-file/a35b922da615/index.html',
       pushed_at: 'Thu Jul 08 10:20:54 2010 -0700',
       description: 'A presentation on what Mozilla can learn from 826 National.'
@@ -97,14 +102,6 @@ var SETTINGS = {
       description: 'A Python C extension module to expose the Mozilla SpiderMonkey engine to Python.'
     },
     {
-      name: 'collusion',
-      homepage: 'http://collusion.toolness.org/',
-      html_url: 'https://github.com/toolness/collusion',
-      blogpost_url: 'http://www.toolness.com/wp/2011/07/collusion/',
-      pushed_at: 'July 2011',
-      description: 'An add-on and web app for visualizing cookie-laden HTTP requests between websites in real time.'
-    },
-    {
       name: 'js-missions',
       homepage: 'http://labs.toolness.com/temp/js-missions/',
       pushed_at: 'August 2011',
@@ -119,6 +116,7 @@ var SETTINGS = {
     {
       name: 'webmaking-for-knitters',
       homepage: 'http://labs.toolness.com/temp/webmaking-for-knitters/',
+      blogpost_url: 'http://www.toolness.com/wp/2012/03/prototyping-presentations/',
       pushed_at: 'January 2012',
       description: 'A presentation answering Mark Surman\'s question, "what sort of web makers do you most want us to work with next year?"'
     },
@@ -145,9 +143,68 @@ var SETTINGS = {
       blogpost_url: 'http://www.toolness.com/wp/2013/01/building-bridges-between-guis-and-code-with-markup-apis/',
       pushed_at: 'July 2012',
       description: 'An experimental fork of Thimble allowing for easy creation of physics simulations via Box2D and a markup API.'
+    },
+    {
+      name: 'code-illuminated',
+      html_url: 'https://code.google.com/p/code-illuminated/',
+      blogpost_url: 'http://www.toolness.com/wp/2009/01/beautifully-documented-code/',
+      pushed_at: 'January 2009',
+      description: 'A tool for the automatic generation of documentation for source code, with an emphasis on typography, readability, and ease of use.'
+    },
+    {
+      name: 'ambient-news',
+      homepage: 'http://vimeo.com/1601371',
+      html_url: 'http://hg.toolness.com/ambnews-firefox/',
+      blogpost_url: 'http://www.toolness.com/wp/2008/08/ambient-news/',
+      pushed_at: 'September 2008',
+      description: 'A zero-configuration Firefox extension to get news about your favorite sites without subscribing to anything.'
     }
   ],
   extensions: {
+    'memory-profiler': {
+      blogpost_url: 'http://www.toolness.com/wp/2009/10/web-application-memory-profiling-take-two/'
+    },
+    'pakreport-jetpack': {
+      blogpost_url: 'http://www.toolness.com/wp/2010/08/my-first-crisiscamp/'
+    },
+    'url-demystifier': {
+      blogpost_url: 'http://www.toolness.com/wp/2011/08/the-decline-and-fall-of-the-url/'
+    },
+    'twitblob': {
+      blogpost_url: 'http://www.toolness.com/wp/2010/09/twitblob/'
+    },
+    'reviewer-dashboard': {
+      blogpost_url: 'http://www.toolness.com/wp/2010/10/reviewer-dashboards/'
+    },
+    'htmlpad': {
+      blogpost_url: 'http://www.toolness.com/wp/2010/10/prelude-to-barcelona/'
+    },
+    'webxray': {
+      blogpost_url: 'http://www.toolness.com/wp/2011/03/enter-the-hackasaurus/'
+    },
+    'all-my-etherpads': {
+      blogpost_url: 'http://www.toolness.com/wp/2011/06/the-challenges-of-developing-offline-web-apps/'
+    },
+    'hackasaurus-parable': {
+      blogpost_url: 'http://www.toolness.com/wp/2011/08/hacking-the-web-with-interactive-stories/'
+    },
+    'webmaking-tutorial-prototype': {
+      blogpost_url: 'http://www.toolness.com/wp/2012/03/webmaker-tutorial-prototyping/'
+    },
+    'storything': {
+      blogpost_url: 'http://www.toolness.com/wp/2012/03/storything-interactive-prototype/'
+    },
+    'quickpreso': {
+      blogpost_url: 'http://www.toolness.com/wp/2012/03/prototyping-presentations/'
+    },
+    'slowparse': {
+      blogpost_url: 'http://www.toolness.com/wp/2012/04/learning-and-grammatical-forgiveness/'
+    },
+    'collusion': {
+      homepage: 'http://collusion.toolness.org/',
+      blogpost_url: 'http://www.toolness.com/wp/2011/07/collusion/',
+      pushed_at: 'July 2011'
+    },
     'badge-microformat-fun': {
       blogpost_url: 'http://www.toolness.com/wp/2013/07/a-html-microformat-for-open-badges/'
     },
@@ -230,7 +287,7 @@ function getRepos(username, cb, url, results) {
   results = results || [];
   $.get(url, function(repos, success, req) {
     if (success != "success") return cb(req);
-    results = results.concat(repos.filter(function(r) { return !r.fork; }));
+    results = results.concat(repos);
     var links = parseLink(req.getResponseHeader('link'));
     if ('next' in links)
       return getRepos(username, cb, links.next, results);
@@ -238,9 +295,11 @@ function getRepos(username, cb, url, results) {
   });
 }
 
-function showRepos(repos, excludes) {
+function showRepos(repos, excludes, forks) {
   var template = _.template($('#project-template').text().trim());
   repos.filter(function(repo) {
+    return !repo.fork || (repo.fork && forks.indexOf(repo.name) != -1);
+  }).filter(function(repo) {
     return excludes.indexOf(repo.name) == -1;
   }).forEach(function(repo) {
     $("#projects").append($(template(new Repo(repo))));
@@ -256,7 +315,7 @@ function main() {
       if (repo.name in SETTINGS.extensions)
         _.extend(repo, SETTINGS.extensions[repo.name]);
     });
-    showRepos(repos, SETTINGS.excludes);
+    showRepos(repos, SETTINGS.excludes, SETTINGS.forks);
   };
 
   if (key in window.sessionStorage)
