link blogpost to pkfloods

--- a/index.html
+++ b/index.html
@@ -167,6 +167,9 @@ var SETTINGS = {
     'pakreport-jetpack': {
       blogpost_url: 'http://www.toolness.com/wp/2010/08/my-first-crisiscamp/'
     },
+    'pkfloods': {
+      blogpost_url: 'http://www.toolness.com/wp/2010/08/my-first-crisiscamp/'
+    },
     'url-demystifier': {
       blogpost_url: 'http://www.toolness.com/wp/2011/08/the-decline-and-fall-of-the-url/'
     },
