added about-mozilla-redesign and planet-ubiquity-redesign

--- a/index.html
+++ b/index.html
@@ -158,6 +158,22 @@ var SETTINGS = {
       blogpost_url: 'http://www.toolness.com/wp/2008/08/ambient-news/',
       pushed_at: 'September 2008',
       description: 'A zero-configuration Firefox extension to get news about your favorite sites without subscribing to anything.'
+    },
+    {
+      name: 'about-mozilla-redesign',
+      homepage: 'http://hg.toolness.com/about-mozilla-redesign/raw-file/061eee7cffe6/about-mozilla.html',
+      html_url: 'http://hg.toolness.com/about-mozilla-redesign/',
+      blogpost_url: 'http://www.toolness.com/wp/2009/03/an-experiment-in-redesigning-aboutmozilla/',
+      pushed_at: 'March 2009',
+      description: 'An attempt to redesign the about:mozilla newsletter, inspired in part by the Swiss Grid System.'
+    },
+    {
+      name: 'planet-ubiquity-redesign',
+      homepage: 'http://hg.toolness.com/planet-ubiquity-redesign/raw-file/2009-03-03-blog-post/docs.html',
+      html_url: 'http://hg.toolness.com/planet-ubiquity-redesign/',
+      blogpost_url: 'http://www.toolness.com/wp/2009/03/redesigning-planets-and-project-dashboards/',
+      pushed_at: 'March 2009',
+      description: 'An experimental redesign for Planet Ubiquity, applicable to any project dashboard.'
     }
   ],
   extensions: {
