rename 'homepage' link to 'try it'

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ h1, h2, h3, h4, h5, h6 {
     <small>Last updated <%- formatDate(pushed_at) %></small>
     <ul class="resources">
       <% if (homepage) { %>
-        <li><a href="<%- homepage %>">homepage</a></li>
+        <li><a href="<%- homepage %>">try it</a></li>
       <% } %>
       <% if (html_url) { %>
         <li><a href="<%- html_url %>">source code</a></li>
