--- a/index.html
+++ b/index.html
@@ -7,7 +7,45 @@ html {
 }
 
 body {
+  margin: 60px 0 0 0;
+}
+
+#filter:focus {
+  outline: 0;
+}
+
+#filter::-moz-placeholder {
+  color: rgba(0, 0, 0, 0.25);
+}
+
+#filter::-webkit-placeholder {
+  color: rgba(0, 0, 0, 0.25);
+}
+
+#filter::-ms-input-placeholder {
+  color: rgba(0, 0, 0, 0.25);
+}
+
+#filter {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: inherit;
+  font-size: 24px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px 10px 10px 48px;
   margin: 0;
+  background-color: #f0f0f0;
+  background-image: url(vendor/Magnifying_glass_icon.svg);
+  background-size: 36px;
+  background-position: 6px 6px;
+  background-repeat: no-repeat;
+  border: none;
+  z-index: 1;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -55,6 +93,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 </style>
 <title>Atul's Prototype Dashboard</title>
+<input id="filter" type="text" placeholder="filter" autofocus>
 <div id="projects"></div>
 <script type="text/html" id="project-template">
   <div class="project">
@@ -396,6 +435,7 @@ function main() {
         _.extend(repo, SETTINGS.extensions[repo.name]);
     });
     showRepos(repos, SETTINGS.excludes, SETTINGS.forks);
+    $("#filter").keyup(filterResults).trigger('keyup');
   };
 
   if (key in window.sessionStorage)
@@ -406,6 +446,20 @@ function main() {
       window.sessionStorage[key] = JSON.stringify(repos);
       done();
     });
+}
+
+function filterResults() {
+  var filter = $(this).val().toLowerCase().trim();
+  var projects = $(".project");
+
+  if (filter)
+    projects.each(function() {
+      var combinedText = $('h2, p', this).text().toLowerCase();
+      var show = combinedText.indexOf(filter) != -1;
+      $(this).toggle(show);
+    });
+  else
+    projects.show();
 }
 
 if (location.search == '?test') {
