--- a/index.html
+++ b/index.html
@@ -268,6 +268,13 @@ var SETTINGS = {
       blogpost_url: 'http://www.toolness.com/wp/2009/03/redesigning-planets-and-project-dashboards/',
       pushed_at: 'March 2009',
       description: 'An experimental redesign for Planet Ubiquity, applicable to any project dashboard.'
+    },
+    {
+      name: 'hivetron-prototype',
+      homepage: 'http://jsbin.com/utawEke/1',
+      html_url: 'http://jsbin.com/utawEke/1/edit',
+      pushed_at: 'November 2013',
+      description: 'A simple webpage atop a spreadsheet making it easy for Hive members to find each other based on their areas of expertise.'
     }
   ],
   extensions: {
