--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@ function Repo(options) {
 
 Repo.prototype = {
   dateInfo: function() {
-    var str = 'Last updated ' + formatDate(this.pushed_at);
+    var lastUpdate = timeago(this.pushed_at) || formatDate(this.pushed_at);
+    var str = 'Last updated ' + lastUpdate;
     if (this.created_at &&
         this.created_at.getFullYear() != this.pushed_at.getFullYear())
       str += ' \u00B7 created ' + this.created_at.getFullYear();
@@ -142,6 +143,27 @@ Repo.prototype = {
   html_url: '',
   blogpost_url: ''
 };
+
+// This is based on http://ejohn.org/blog/javascript-pretty-date/.
+function timeago(time, now) {
+  now = now || new Date();
+
+  var diff = (((new Date()).getTime() - time.getTime()) / 1000);
+  var day_diff = Math.floor(diff / 86400);
+
+  if (isNaN(day_diff) || day_diff < 0 || day_diff >= 31)
+    return;
+
+  return day_diff == 0 && (
+      diff < 60 && "just now" ||
+      diff < 120 && "1 minute ago" ||
+      diff < 3600 && Math.floor(diff / 60) + " minutes ago" ||
+      diff < 7200 && "1 hour ago" ||
+      diff < 86400 && Math.floor(diff / 3600) + " hours ago") ||
+    day_diff == 1 && "Yesterday" ||
+    day_diff < 7 && day_diff + " days ago" ||
+    day_diff < 31 && Math.ceil(day_diff / 7) + " weeks ago";
+}
 
 function getSourceCodeName(url) {
   return /^https?:\/\/github\.com\//.test(url)
