--- a/index.html
+++ b/index.html
@@ -95,8 +95,38 @@ h1, h2, h3, h4, h5, h6 {
   color: black;
   text-decoration: underline;
 }
+
+#throbber {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  opacity: 0.5;
+}
+
+body:not(.loaded) #filter, body:not(.loaded) #projects {
+  display: none;
+}
+
+body.loaded #throbber {
+  display: none;
+}
 </style>
 <title>Atul's Prototype Dashboard</title>
+<div id="throbber">
+  <!-- http://commons.wikimedia.org/wiki/File:Chromiumthrobber.svg -->
+  <svg width="16" height="16" viewBox="0 0 300 300"
+     xmlns="http://www.w3.org/2000/svg" version="1.1">
+    <path d="M 150,0
+             a 150,150 0 0,1 106.066,256.066
+             l -35.355,-35.355
+             a -100,-100 0 0,0 -70.711,-170.711 z"
+          fill="black">
+      <animateTransform attributeName="transform" attributeType="XML"
+             type="rotate" from="0 150 150" to="360 150 150"
+             begin="0s" dur="1s" fill="freeze" repeatCount="indefinite" />
+    </path>
+  </svg> Loading&hellip;
+</div>
 <input id="filter" type="text" placeholder="filter" autofocus>
 <div id="projects"></div>
 <script type="text/html" id="project-template">
@@ -269,6 +299,7 @@ function main() {
     });
     showRepos(repos, SETTINGS.excludes, SETTINGS.forks);
     $("#filter").keyup(filterResults).trigger('keyup');
+    $('body').addClass('loaded');
   };
 
   if (key in window.sessionStorage)
